YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/traefik.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      serviceAccountName: traefik-ingress-controller
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: traefik
          image: traefik:3.1
          args:
            - --api.insecure=true
            - --api.dashboard=true
            - --providers.kubernetesingress=true
            - --entrypoints.web.address=:80
            - --entrypoints.traefik.address=:8080
          ports:
            - containerPort: 80
              name: web
            - containerPort: 8080
              name: admin
