YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/worker.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: epitechcontent/t-dop-600-worker:k8s
          resources:
            limits:
              memory: "256M"
