YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/poll.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: default
spec:
  selector:
    app: poll
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
