YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/postgres.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
