YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/redis.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
