YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/result.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: default
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
