YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/poll.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poll
                port:
                  number: 80
