YEAR_3/DevOps/G-DOP-500-TLS-5-1-bernstein-4/result.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: result.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
